First commit for major refactoring and bug fixes.

--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -175,15 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-14 10:28:48,870\tERROR worker.py:682 -- Calling ray.init() again after it has already been called.\n"
+      "2020-04-16 15:27:20,578\tINFO resource_spec.py:212 -- Starting Ray with 4.15 GiB memory available for workers and up to 2.09 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-16 15:27:20,945\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'node_ip_address': '192.168.1.149',\n",
+       " 'redis_address': '192.168.1.149:24962',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-16_15-27-20_568286_46653/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-16_15-27-20_568286_46653/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8266',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-16_15-27-20_568286_46653'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -205,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If `ray.init()` worked successfully, you'll see a JSON block with information such as the `node_ip_address` and `webui_rul`. \n",
+    "If `ray.init()` worked successfully, you'll see a JSON block with information such as the `node_ip_address` and `webui_url`. \n",
     "\n",
     "A separate message tells you that URL is for the [Ray Dashboard](https://ray.readthedocs.io/en/latest/ray-dashboard.html#ray-dashboard). Open it now in a separate browser tab. It should look something like this:\n",
     "![Ray Dashboard screenshot](../images/Ray-Dashboard.png)"
@@ -217,7 +233,7 @@
    "source": [
     "> **Tips:** \n",
     ">\n",
-    "> 1. You can ask Ray for this URL later if needed. Use `ray.get_webui_url()`.\n",
+    "> 1. You can ask Ray for this URL later if needed. Use `ray.get_webui_url()`. In a notebook cell use `f'http://{ray.get_webui_url()}'` to print a clickable URL.\n",
     "> 2. When you exit your program, including these notebooks, `ray.shutdown()` is called ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.shutdown)). You can also call it yourself, for example if you want to restart Ray in a notebook, but not restart the whole kernel, use `ray.shutdown()` followed by `ray.init()`. The flag we're passing to `ray.init()` above doesn't actually restart Ray if we run `ray.init()` twice.\n",
     "> \n",
     "> **Note:** There are many options you can pass to `ray.init()`. See the [ray.init](https://ray.readthedocs.io/en/latest/package-ref.html#ray.init) and [configuration](https://ray.readthedocs.io/en/latest/configure.html) documentation for details, some of which we'll explore in later lessons."
@@ -225,22 +241,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'localhost:8265'"
+       "'http://localhost:8266'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ray.get_webui_url()"
+    "f'http://{ray.get_webui_url()}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note the port (8265 or higher): http://localhost:8266 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Note the port (8265 or higher): http://{ray.get_webui_url()} ')"
    ]
   },
   {
