--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,29 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-11 17:48:23,790\tINFO resource_spec.py:212 -- Starting Ray with 4.59 GiB memory available for workers and up to 2.3 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-11 17:48:24,146\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
+      "2020-04-16 13:53:54,447\tINFO resource_spec.py:212 -- Starting Ray with 4.93 GiB memory available for workers and up to 2.47 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-16 13:53:54,846\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:15707',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8266',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557'}"
+       " 'redis_address': '192.168.1.149:64881',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8265',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,24 +89,34 @@
    "source": [
     "## ray.init()\n",
     "\n",
-    "[`ray.init()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.init) has a lot of keyword arguments you can pass. Here are some of them.\n",
+    "When we used [`ray.init()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.init), we used it to start Ray on our local machine. When the optional `address=...` argument is specified, the driver connects to the corresponding Ray cluster.\n",
+    "\n",
+    "There are a lot of optional keyword arguments you can pass to `ray.init()`. Here are some of them. All options are described in the [documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.init).\n",
     "\n",
     "| Name | Type | Example | Description |\n",
     "| :--- | :--- | :------ | :---------- |\n",
-    "| `address` | `str` | `address='auto'` | The address of the Ray cluster to connect to. If this address is not provided, then this command will start Redis, a raylet, a plasma store, a plasma manager, and some workers. It will also kill these processes when Python exits. Using `auto` on a node in a Ray cluster connects to the cluster. |\n",
-    "| `num_cpus` | `int` | `num_cpus=4` | Each _raylet_ should be configured with this number of CPU cores. |\n",
-    "| `num_gpus` | `int` | `num_gpus=1` | Each _raylet_ should be configured with this number of GPU cores. |\n",
+    "| `address` | `str` | `address='auto'` | The address of the Ray cluster to connect to. If this address is not provided, then this command will start Redis, a raylet, a plasma store, a plasma manager, and some workers. It will also kill these processes when Python exits. If the driver is running on a node in a Ray cluster, using `auto` as the value tells the driver to detect the the cluster, removing the need to specify a specific node address. |\n",
+    "| `num_cpus` | `int` | `num_cpus=4` | Number of CPUs the user wishes to assign to each _raylet_. |\n",
+    "| `num_gpus` | `int` | `num_gpus=1` | Number of GPUs the user wishes to assign to each _raylet_. |\n",
+    "| `resources` | `dictionary` | `resources={'resource1': 4, 'resource2': 16}` | Maps the names of custom resources to the quantities of those resources available. |\n",
     "| `memory` | `int` | `memory=1000000000` | The amount of memory (in bytes) that is available for use by workers requesting memory resources. By default, this is automatically set based on the available system memory. |\n",
     "| `object_store_memory` | `int` | `object_store_memory=1000000000` | The amount of memory (in bytes) for the object store. By default, this is automatically set based on available system memory, subject to a 20GB cap. |\n",
-    "| `log_to_driver` | `bool` | `log_to_driver=True` | If true, then output from all of the worker processes on all nodes will be directed to the driver program. |\n",
-    "| `local_mode` | `bool` | `local_mode=True` | Use `True` if the code should be executed serially. This is useful for debugging. |\n",
-    "| `ignore_reinit_error` | `bool` | `ignore_reinit_error=True` | `True` if we should suppress errors from calling `ray.init()` a second time, as we've done in these notebooks. |\n",
-    "| `include_webui` | `bool` | `include_webui=False` | Boolean flag indicating whether to start the web UI, which displays the status of the Ray cluster. By default, or if this argument is `None`, then the UI will be started if the relevant dependencies are present. |\n",
+    "| `log_to_driver` | `bool` | `log_to_driver=True` | If true, then the output from all of the worker processes on all nodes will be directed to the driver program. |\n",
+    "| `local_mode` | `bool` | `local_mode=True` | If true, the code will be executed serially. This is useful for debugging. |\n",
+    "| `ignore_reinit_error` | `bool` | `ignore_reinit_error=True` | If true, Ray suppresses errors from calling `ray.init()` a second time (as we've done in these notebooks). Ray won't be restarted. |\n",
+    "| `include_webui` | `bool` | `include_webui=False` | Boolean flag indicating whether or not to start the web UI, which displays the status of the Ray cluster. By default, or if this argument is `None`, then the UI will be started if the relevant dependencies are present. |\n",
     "| `webui_host` | _address_ | `webui_host=1.2.3.4` | The host to bind the web UI server to. Can either be `localhost` (or `127.0.0.1`) or `0.0.0.0` (available from all interfaces). By default, this is set to `localhost` to prevent access from external machines. |\n",
-    "| `configure_logging` | `bool` | `configure_logging=True` | `True` if configuration of logging is allowed here. Otherwise, the user may want to configure it separately. |\n",
-    "| `logging_level` | _Flag_ | `logging_level=logging.INFO` | Logging level, defaults to `logging.INFO`. |\n",
-    "| `logging_format` | `str` | `logging_format='...'` | The logging format to use, defaults to a string containing a timestamp, filename, line number, and message. See in the Ray source code `ray_constants.py` for details. |\n",
-    "\n"
+    "| `configure_logging` | `bool` | `configure_logging=True` | If true (default), configuration of logging is allowed here. Otherwise, the user may want to configure it separately. |\n",
+    "| `logging_level` | _Flag_ | `logging_level=logging.INFO` | The logging level, defaults to `logging.INFO`. Ignored unless \"configure_logging\" is true. |\n",
+    "| `logging_format` | `str` | `logging_format='...'` | The logging format to use, defaults to a string containing a timestamp, filename, line number, and message. See the Ray source code `ray_constants.py` for details. Ignored unless \"configure_logging\" is true. |\n",
+    "| `temp_dir` | `str` | `temp_dir=/tmp/myray` | If provided, specifies the root temporary directory for the Ray process. Defaults to an OS-specific conventional location, e.g., `/tmp/ray`. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See also the documentation for [ray.shutdown()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.shutdown), which is needed in some contexts."
    ]
   },
   {
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +139,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,32 +160,76 @@
     "| :--- | :--- | :------ | :---------- |\n",
     "| `num_cpus` | `int` | `num_cpus=4` | The number of CPU cores to reserve for this task or for the lifetime of the actor. |\n",
     "| `num_gpus` | `int` | `num_gpus=1` | The number of GPU cores to reserve for this task or for the lifetime of the actor. |\n",
-    "| `num_return_vals` | `int` | `num_return_vals=2` | (only for remote functions/tasks, not actors) The number of object IDs returned by the remote function invocation. |\n",
-    "| `max_calls` | `int` | `max_calls=5` | (only for remote functions) The maximum number of times that a given worker can execute the given remote function before it must exit (this can be used to address memory leaks in third-party libraries or to reclaim resources that cannot easily be released, e.g., GPU memory that was acquired by TensorFlow). By default this is infinite. |\n",
-    "| `max_reconstructions` | `int` | `max_reconstructions=4` | (only for actors) The maximum number of times that the actor should be reconstructed when it dies unexpectedly. The minimum valid value is 0 (default), which indicates that the actor doesn’t need to be reconstructed. And the maximum valid value is `ray.ray_constants.INFINITE_RECONSTRUCTION`. |\n",
-    "| `max_retries` | `int` | `max_retries=5` | (only for remote functions) The maximum number of times that the remote function should be rerun when the worker process executing it crashes unexpectedly. The minimum valid value is 0, the default is 4 (default), and the maximum valid value is `ray.ray_constants.INFINITE_RECONSTRUCTION`. |\n",
+    "| `num_return_vals` | `int` | `num_return_vals=2` | (Only for tasks, not actors.) The number of object IDs returned by the remote function invocation. |\n",
     "\n",
-    "What is `ray.ray_constants.INFINITE_RECONSTRUCTION`?"
+    "Here's an example with and without `num_return_vals`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1073741824"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a, 1, 2.2)\n",
+      "(a, 1, 2.2)\n"
+     ]
     }
    ],
    "source": [
-    "ray.ray_constants.INFINITE_RECONSTRUCTION"
+    "@ray.remote(num_return_vals=3)\n",
+    "def tuple3(one, two, three):\n",
+    "    return (one, two, three)\n",
+    "\n",
+    "x_id, y_id, z_id = tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get([x_id, y_id, z_id])\n",
+    "print(f'({x}, {y}, {z})')\n",
+    "\n",
+    "@ray.remote\n",
+    "def tuple3(one, two, three):\n",
+    "    return (one, two, three)\n",
+    "\n",
+    "xyz_id = tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get(xyz_id)\n",
+    "print(f'({x}, {y}, {z})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### @ray.method()\n",
+    "\n",
+    "Sometimes you want `@ray.remote()` keyword arguments to apply to particular actor methods, but not the whole actor class. Use [@ray.method()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.method) for this purpose, as in the following example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a, 1, 2.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@ray.remote\n",
+    "class Tupleator:\n",
+    "    @ray.method(num_return_vals=3)\n",
+    "    def tuple3(self, one, two, three):\n",
+    "        return (one, two, three)\n",
+    "    \n",
+    "tupleator = Tupleator.remote()\n",
+    "x_id, y_id, z_id = tupleator.tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get([x_id, y_id, z_id])\n",
+    "print(f'({x}, {y}, {z})')   "
    ]
   },
   {
@@ -185,6 +239,26 @@
     "## ray.put()\n",
     "\n",
     "We used [`ray.get`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.gett) a lot to retrieve objects and we used actor methods to retrieve state from an actor. You can actually put objects into the object store explicitly with [`ray.put`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.put), as shown in the following example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://localhost:8265'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'http://{ray.get_webui_url()}'"
    ]
   },
   {
@@ -209,21 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is an optional flag you can pass `weakref=True` (defaults to `False`). If set, Ray is allowed to evict the object while a reference to the returned ID still exists. This is useful if you are putting a lot of objects into the object store and many of them might not be needed in the future. It allows Ray to more aggressively reclaim memory."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ray.kill(actor)\n",
-    "\n",
-    "Sometimes it might be necessary to terminate an actor. Use [`ray.kill(actor)`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.kill) for this purpose.\n",
-    "It will interrupt any running tasks on the actor, causing them to fail immediately. Any [`atexit`](https://docs.python.org/3/library/atexit.html) handlers installed in the actor process will still be run.\n",
-    "\n",
-    "If you want to kill the actor but let pending tasks finish, you can call `actor.__ray_terminate__.remote()` instead to queue a termination task.\n",
-    "\n",
-    "If this actor is reconstructable, reconstruction will be attempted."
+    "There is an optional flag you can pass `weakref=True` (defaults to `False`). If true, Ray is allowed to evict the object while a reference to the returned ID still exists. This is useful if you are putting a lot of objects into the object store and many of them might not be needed in the future. It allows Ray to more aggressively reclaim memory."
    ]
   },
   {
@@ -243,7 +303,7 @@
     "| [`ray.objects()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.objects) | Objects currently in the Object Store |\n",
     "| [`ray.cluster_resources()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.cluster_resources) | All the available resources, used or not |\n",
     "| [`ray.available_resources()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.available_resources) | Resources not in use |\n",
-    "| [`ray.errors()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.errors) | What errrors have occurred for this job (use `all_jobs=True` for all) |"
+    "| [`ray.errors()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.errors) | What errrors have occurred for this job (pass `all_jobs=True` for all errors) |"
    ]
   },
   {
@@ -313,42 +373,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ray.shutdown()\n",
-    "\n",
-    "You don't always need to call it explicitly, but [`ray.shutdown()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.shutdown) will disconnect the worker, and terminate processes started by `ray.init()`.\n",
-    "\n",
-    "It is automatically run at the end when a Python process that uses Ray exits. It is okay to run this twice in a row. The primary use case for this function is to cleanup state between tests.\n",
-    "\n",
-    "Note that this will clear any remote function definitions, actor definitions, and existing actors, so if you wish to use any previously defined remote functions or actors after calling `ray.shutdown()`, then you need to redefine them. If they were defined in an imported module, then you will need to reload the module.\n",
-    "\n",
-    "There is one optional parameter, `exiting_interpreter=True|False`. `True` is passed when `ray.shutdown()` is called by the `atexit` hook and `False` otherwise. If Ray is exiting the interpreter, it waits a little while to print any extra error messages."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## ray.timeline()\n",
     "\n",
-    "Sometimes you need to find where the bottlenecks are. [`ray.timeline()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline) helps. It returns a list of profiling events that can viewed as a timeline. To use the results, the easiest method is to dump the data to a JSON file by passing in `filename=...` argument. Or, you can call `json.dump(filename)` on the returned object. In either case, then open chrome://tracing in a Chrome browser window (only Chrome works) and load the dumped file. Try examing the following file (but the output will be boring at the moment):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.timeline(filename = '../tmp/timeline-example.json')"
+    "Sometimes you need to find task bottlenecks. [`ray.timeline()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline) helps. It returns a list of profiling events that can viewed as a timeline. To use the results, the easiest method is to dump the data to a JSON file by passing in `filename=...` argument. Or, you can call `json.dump(filename)` on the returned object. In either case, open chrome://tracing in a Chrome browser window (only Chrome works) and load the dumped file. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ray.object_transfer_timeline()\n",
+    "## ray.kill(actor)\n",
     "\n",
-    "The related [`ray.object_transfer_timeline()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.object_transfer_timeline) returns events for objects moved between nodes."
+    "It's rarely needed, but to terminate an actor, use [`ray.kill(actor)`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.kill).\n",
+    "It will interrupt any running tasks on the actor, causing them to fail immediately. All pending messages for the actor will be lost, as well as the actor's state. The enclosing worker also exits, althrough Ray will create a new one when needed. Any [`atexit`](https://docs.python.org/3/library/atexit.html) handlers installed in the actor's worker process will still be run. Hence, avoid using this method."
    ]
   }
  ],
