--- a/ray-core/06-RecapTipsTricks.ipynb
+++ b/ray-core/06-RecapTipsTricks.ipynb
@@ -38,9 +38,11 @@
     "## General Task and Actor Tips\n",
     "\n",
     "* To create a task from a function or an actor from a class, annotate it with `@ray.remote`.\n",
-    "* Invoke tasks and actor methods (including the constructor) with `foo.remote(...)`.\n",
+    "* Invoke tasks with `foo.remote(...)`\n",
+    "* Invoke actor constructors `MyClass.remote(...)`.\n",
+    "* Invoke actor methods with `my_instance.remote(...)`.\n",
     "* Invocations return an `ObjectID` for a _future_. Use `ray.get(id)` to return the value.\n",
-    "* However, `ray.get()` blocks, so consider using `ray.wait()` when waiting for a collection of futures, so as they become available, you can retrieve them with `ray.get()` (which won't block on available results), then process the results, all while waiting for the rest to finish.\n",
+    "* However, `ray.get()` blocks, so consider using `ray.wait()` when waiting for a collection of futures, so as they become available, you can retrieve them with `ray.get()` (which won't block when we know the results are available), then process the results, all while waiting for the rest to finish.\n",
     "* Pick functions to parallelize that do enough work so that the Ray \"remoting\" overhead is not significant. Very short functions will actually yield lower performance if convert to tasks. \n",
     "* Similarly, avoid too many actors, as each one is pinned to memory until no longer needed."
    ]
@@ -51,7 +53,7 @@
    "source": [
     "### Using Existing Functions and Classes\n",
     "\n",
-    "An existing function can be used as a task by defining a new task function that calls. For example:\n",
+    "An existing function can be used as a task by defining a new task function that calls the original function. For example:\n",
     "\n",
     "```python\n",
     "def work(args):\n",
@@ -62,8 +64,13 @@
     "    do_work(args)\n",
     "```\n",
     "\n",
-    "This allows you to use both versions as appropriate.\n",
-    "\n",
+    "This allows you to use either version, as appropriate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Similarly, existing classes can be subclassed to create actors:\n",
     "\n",
     "```python\n",
@@ -84,9 +91,7 @@
     "        return self.count\n",
     "```\n",
     "\n",
-    "Note that we added a `get_count()` method, because member attributes can't be accessed directly, in contrast with normal classes.\n",
-    "\n",
-    "However, Ray currently doesn't support an actor subclassing another actor. Only regular Python classes can be used."
+    "Note that we added a `get_count()` method, because member attributes can't be accessed directly, in contrast with normal classes. Of course, you don't need to add _accessor_ methods unless you need them."
    ]
   },
   {
@@ -101,6 +106,13 @@
     "\n",
     "You can get the URL later if needed using `ray.get_webui_url()`.\n",
     "\n",
+    "> **Tip:** In a notebook, use a cell with `f'http://{ray.get_webui_url()}'`. The full URL printed will be clickable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Profiling Actors\n",
     "\n",
     "The _Logical View_ offers a powerful and convenient way to profile actor performance using [flame graphs](http://www.brendangregg.com/flamegraphs.html). Details are in the [Dashboard docs](https://ray.readthedocs.io/en/latest/ray-dashboard.html#ray-dashboard).\n",
