--- a/ray-core/03-TaskParallelism-Part2.ipynb
+++ b/ray-core/03-TaskParallelism-Part2.ipynb
@@ -90,6 +90,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'New port? http://{ray.get_webui_url()}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
