--- a/ray-core/04-DistributedStateWithActors.ipynb
+++ b/ray-core/04-DistributedStateWithActors.ipynb
@@ -2107,6 +2107,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'New port? http://{ray.get_webui_url()}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
