Clarified the discussion of ray.method

--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "### @ray.method()\n",
     "\n",
-    "Sometimes you want `@ray.remote()` keyword arguments to apply to particular actor methods, but not the whole actor class. Use [@ray.method()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.method) for this purpose, as in the following example:"
+    "Related to `@ray.remote()`, [@ray.method()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.method) allows you to specify the number of return values for a method in an actor, by passing the `num_return_vals` keyword argument. None of the other `@ray.remote()` keyword arguments are allowed. Here is an example:"
    ]
   },
   {
