--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -492,118 +492,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To better see what's happening with the dashboard, run the following cells to determine the number of CPU hardware threads on your laptop, each of which is running a `ray` process. We've expanded this code over several cells so you can see what each step returns, but you could write it all at once, `num_cpus = ray.nodes()[0]['Resources']['CPU']`."
+    "To better see what's happening with the dashboard, run the following cells to determine the number of CPU hardware threads on your laptop, each of which is running a `ray` process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'NodeID': '8e69b35fe14da304ad0b43c53240300fdcfe9936',\n",
-       "  'Alive': True,\n",
-       "  'NodeManagerAddress': '192.168.1.149',\n",
-       "  'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       "  'NodeManagerPort': 51527,\n",
-       "  'ObjectManagerPort': 51559,\n",
-       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/plasma_store',\n",
-       "  'RayletSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/raylet',\n",
-       "  'Resources': {'object_store_memory': 30.0,\n",
-       "   'CPU': 8.0,\n",
-       "   'node:192.168.1.149': 1.0,\n",
-       "   'memory': 87.0},\n",
-       "  'alive': True}]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "nodes = ray.nodes()  # Get a JSON object with metadata about all the nodes in your \"cluster\".\n",
-    "nodes                # On your laptop, a list with one node."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NodeID': '8e69b35fe14da304ad0b43c53240300fdcfe9936',\n",
-       " 'Alive': True,\n",
-       " 'NodeManagerAddress': '192.168.1.149',\n",
-       " 'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       " 'NodeManagerPort': 51527,\n",
-       " 'ObjectManagerPort': 51559,\n",
-       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/plasma_store',\n",
-       " 'RayletSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/raylet',\n",
-       " 'Resources': {'object_store_memory': 30.0,\n",
-       "  'CPU': 8.0,\n",
-       "  'node:192.168.1.149': 1.0,\n",
-       "  'memory': 87.0},\n",
-       " 'alive': True}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node = nodes[0]    # Get the single node\n",
-    "node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'object_store_memory': 30.0,\n",
-       " 'CPU': 8.0,\n",
-       " 'node:192.168.1.149': 1.0,\n",
-       " 'memory': 87.0}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resources = node['Resources']   # Get the resources for the node\n",
-    "resources"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_cpus = resources['CPU']  # Get the number of CPU hardware threads\n",
+    "num_cpus_float = ray.cluster_resources()['CPU']\n",
+    "num_cpus = round(num_cpus_float) if num_cpus_float > 0.50 else 1\n",
     "num_cpus"
    ]
   },
