--- a/ray-core/03-TaskParallelism-Part2.ipynb
+++ b/ray-core/03-TaskParallelism-Part2.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports and initialize Ray. We're adding NumPy for the examples and the tutorial `util` library:\n",
+    "# Imports. We're adding NumPy for the examples and the tutorial `util` library:\n",
     "\n",
     "import ray, time, sys    # New notebook, so new process\n",
     "import numpy as np       # Used for examples"
