--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -4,8 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anyscale Academy - Ray Tutorials\n",
-    "\n",
+    "# Anyscale Academy - Ray Tutorials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "table {margin-left: 0 !important;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "table {margin-left: 0 !important;}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
     "Welcome to the [Anyscale Academy](https://anyscale.com/academy) tutorials on [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster.\n",
@@ -49,22 +85,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ray Core\n",
+    "### Crash Course\n",
+    "\n",
+    "Directory: `crash-course`\n",
+    "\n",
+    "Start here if you want the quickest introduction to the Ray API. The notebooks in this folder walk through non-trivial examples of Ray _tasks_ and _actors_, which make it painless to scale applications from a laptop to a cluster.\n",
+    "\n",
+    "| Lesson                                                       | Description                                      |\n",
+    "| :----------------------------------------------------------- | :----------------------------------------------- |\n",
+    "| [00 Overview](crash-course/00-Overview.ipynb)                | Introduction to this tutorial.                   |\n",
+    "| [01 Ray Tasks](crash-course/01-RayCrashCourse-Tasks.ipynb)   | Accelerating _stateless_ work with Ray _tasks_.  |\n",
+    "| [02 Ray Actors](crash-course/02-RayCrashCourse-Actors.ipynb) | Intuitive distributed _state_ with Ray _actors_. |\n",
+    "\n",
+    "After going through these notebooks, proceed to any of the following tutorials:\n",
+    "\n",
+    "| Module                                                   | Description                                         |\n",
+    "| :------------------------------------------------------- | :-------------------------------------------------- |\n",
+    "| [Ray Core - A Deeper Dive](ray-core/00-Overview.ipynb)   | More about the Ray API and how it works internally. |\n",
+    "| [Ray RLlib](ray-rllib/00-Overview.ipynb)                 | Reinforcement Learning library built on Ray.        |\n",
+    "| [Ray Tune](ray-tune/00-Overview.ipynb)                   | Hyperparameter Tuning library built on Ray.         |\n",
+    "| [Ray Serve](ray-serve/00-Overview.ipynb)                 | Model Serving library built on Ray.                 |\n",
+    "\n",
+    "More tutorials will be added soon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ray Core - A Deeper Dive\n",
     "\n",
     "Directory: `ray-core`\n",
     "\n",
-    "This is the place to start. This module introduces you to Ray, why it was created, what problems it solves, how to use it, and how it works behind the scenes.\n",
+    "This tutorial provides a deeper introduction to Ray's core API. It also explores why Ray was created, what problems it is designed to solve, and how it works behind the scenes.\n",
     "\n",
-    "Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
+    "This tutorial assumes you've gone through the Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
     "\n",
-    "| Lesson | Open in Colab | Description |\n",
-    "| :----- | :------------ | :---------- |\n",
-    "| [01 Introduction](ray-core/01-Introduction.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/01-Introduction.ipynb\" target=\"_01-Introduction\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 01-Introduction\"/></a> | Start in this notebook, which introduces Ray. |\n",
-    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/02-TaskParallelism-Part1.ipynb\" target=\"_02-TaskParallelism-Part1\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 02-TaskParallelism-Part1\"/></a> | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/03-TaskParallelism-Part2.ipynb\" target=\"_03-TaskParallelism-Part2\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 03-TaskParallelism-Part2\"/></a> | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/04-DistributedStateWithActors.ipynb\" target=\"_04-DistributedStateWithActors\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 04-DistributedStateWithActors\"/></a> | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/05-ExploringRayAPICalls.ipynb\" target=\"_05-ExploringRayAPICalls\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 05-ExploringRayAPICalls\"/></a> | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |\n",
-    "| [06-Recap Tips and Tricks](ray-core/06-RecapAndTipsTricks.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/06-RecapAndTipsTricks.ipynb\" target=\"_06-RecapAndTipsTricks\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 06-RecapAndTipsTricks\"/></a> | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |\n"
+    "| Lesson | Description |\n",
+    "| :----- | :---------- |\n",
+    "| [00 Overview](ray-core/00-Overview.ipynb) | Introduction to this tutorial. |\n",
+    "| [01 Why Ray?](ray-core/01-WhyRay.ipynb)   | Why was Ray created? What problems does it solve? |\n",
+    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |\n",
+    "| [06-Recap Tips and Tricks](ray-core/06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |\n"
    ]
   },
   {
