--- a/crash-course/02-RayCrashCourse-Actors.ipynb
+++ b/crash-course/02-RayCrashCourse-Actors.ipynb
@@ -48,7 +48,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
